--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+made by jonathan, feel free to share this lol
 <video width="100%" controls="" autoplay="">
 <source src="https://indiameme.github.io/mundian.mp4" type="video/mp4">
 </video>
